--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,8 @@
   },
   "ConnectionStrings": {
     "ConString": "Server=spinners;Database=Clinical_Dev;User Id=shire_user;Password=shire1;TrustServerCertificate=True"
+    //"ConString": "Server=specials;Database=Clinical_XP;User Id=shire_user;Password=shire1;TrustServerCertificate=True"
+    //can't test Live until views have been created in Live
   },
   "AllowedHosts": "*"
 }
