--- a/CPTest.csproj
+++ b/CPTest.csproj
@@ -24,4 +24,11 @@
     <PackageReference Include="PdfSharpCore" Version="1.3.63" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Pages\BWHDayView.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
