--- a/CPTest.csproj
+++ b/CPTest.csproj
@@ -26,7 +26,7 @@
 
   <ItemGroup>
     <Reference Include="ClinicalXPDataConnections">
-      <HintPath>..\..\..\Websites\Libraries\ClinicalXPDataConnections.dll</HintPath>
+      <HintPath>G:\Technical Improvements Group\C# Libraries\ClinicalXPDataConnections.dll</HintPath>
     </Reference>
   </ItemGroup>
 
