qr code auto generate

--- a/.gitignore
+++ b/.gitignore
@@ -366,3 +366,4 @@ FodyWeavers.xsd
 \wwwroot\cliniclist.pdf
 /wwwroot/cliniclist-mnln.pdf
 /wwwroot/letter-mnln.pdf
+/wwwroot/Images/QRCodes/QRCodeBWH.png
